--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-div {
-    width: 400px;
-    margin: 50px auto;
+#title-container {
     background-color: black;
   }
   
@@ -8,4 +6,10 @@ div {
     text-align: center;
     color: white;
   }
+  
+  .container {
+    width: 400px;
+    margin: 50px auto;
+  }
+  
   
